# bot-nutritionist

./: Cargo.toml
DB/: DB (copy).sqlite  DB.sqlite  DB.sqlite-journal
DB/bak/: DB.sqlite
migrations/2024-06-30-144926_init/: down.sql  up.sql
src/: domain.rs  main.rs  main_functions.rs  model.rs  receive_info.rs  schema.rs  state.rs  utils.rs
src/domain/: diet_domain.rs  profile_domain.rs
src/main_functions/: diet.rs  notifications.rs  pfc.rs  pfcfood.rs  portfolio.rs  profile.rs
src/model/: schema.rs  usecases.rs
