[package]
name = "bot-nutritionist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.36.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
diesel = {version = "2.1.5", features = ["sqlite", "r2d2"]}
lazy_static = {version = "1.5.0"}
itertools = "0.13"
chrono = "0.4.38"
